[package]
name = "pokemmo_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.8.10"
device_query = "=0.2.8"
image-compare = "0.3.1"
image = "0.24.9"
fltk = "^1.4"
fltk-grid = "0.4"
rust-embed = "8.3.0"
